--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,5 +1,6 @@
+<section class="min-h-[calc(100vh-8rem)] py-16 px-4 sm:px-6 lg:px-8 relative" style="background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.4)), url('../../../../assets/puntosafa_fondo3.jpeg'); background-size: cover; background-position: center;">
 
-  <app-hero-section-inicio></app-hero-section-inicio>
+<app-hero-section-inicio></app-hero-section-inicio>
   <section class="bg-white py-4">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <div class="  container mx-auto flex justify-center items-center space-x-4">
@@ -18,3 +19,4 @@
   <app-carousel></app-carousel>
   <app-recomendacion-libro></app-recomendacion-libro>
 
+</section>
