--- a/src/app/page/pedidos-cliente/pedidos-cliente.component.html
+++ b/src/app/page/pedidos-cliente/pedidos-cliente.component.html
@@ -1,4 +1,4 @@
-<section class="min-h-[calc(100vh-8rem)] py-16 px-4 sm:px-6 lg:px-8 relative" style="background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.4)), url('../../../../assets/puntosafa_fondo3.jpeg'); background-size: cover; background-position: center;">
+<section class="min-h-[calc(100vh-8rem)] py-16 px-4 sm:px-6 lg:px-8 relative" style="background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.4)), url('../../../../assets/fondo_puntosafa.jpeg'); background-size: cover;">
 
 
 
