Arreglos: ordenación de carpetas.

--- a/src/app/component/libro-edicion/registro-libro/registro-libro.component.html
+++ b/src/app/component/libro-edicion/registro-libro/registro-libro.component.html
@@ -2,7 +2,7 @@
   <!-- Encabezado -->
   <section class="bg-customGreen py-2 md:py-3 shadow-gray-500 shadow-sm">
     <div class="container mx-auto flex flex-col md:flex-row items-center px-4 md:px-6 lg:px-8 lg:gap-x-4 justify-between">
-      <img src="/assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">
+      <img src="/src/assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">
       <h1 class="text-4xl font-extrabold text-blue-900 leading-tight">
         Registrar nuevo libro
       </h1>
