--- a/src/app/component/contrasena/recuperar-contrasena/recuperar-contrasena.component.html
+++ b/src/app/component/contrasena/recuperar-contrasena/recuperar-contrasena.component.html
@@ -5,7 +5,7 @@
     <div class="container mx-auto flex flex-col md:flex-row items-center px-4 md:px-6 lg:px-8 lg:gap-x-4 justify-between">
       <!-- Logo -->
       <div class="flex-shrink-0">
-        <img src="/assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-40 md:w-48 mx-auto">
+        <img src="/src/assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-40 md:w-48 mx-auto">
       </div>
       <!-- Título -->
       <div class="text-center md:text-left max-w-xl mx-auto">
