--- a/src/app/component/email/email.component.html
+++ b/src/app/component/email/email.component.html
@@ -2,7 +2,7 @@
   <section class="bg-customGreen py-2 md:py-3 shadow-gray-500 shadow-sm">
     <div class="container mx-auto flex flex-col md:flex-row items-center px-4 md:px-6 lg:px-8 lg:gap-x-4 justify-between">
       <div class="mt-10 md:mt-0">
-        <img src="/assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">
+        <img src="/src/assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">
       </div>
       <div class="flex items-center justify-center text-center md:text-left max-w-2xl lg:max-w-xl mx-auto">
         <h1 class="text-4xl font-extrabold text-blue-900 leading-tight">
